  File doc/developers/release_checklist: Skip mail to lsm
  Library: Handle new chassis intrusion interface (w93792d and w83793)
  Module i2c-ali1563: Remove sparse warnings (2.6 backport)
  Module i2c-amd8111: Fix timeout handling (2.6 backport)
  Module i2c-piix4: ATI SB800 is not actually supported
  Module it87: Properly decode -128 degrees C (2.6 backport)
  Program eepromer: Fix array initialization overrun
  Program sensord: Fix a memory leak when a chip name is provided
  Program sensors: Fix a memory leak when a chip name is provided
                   Fix iconv-related build warning in set_degstr
                   Properly support Maxim MAX6650 and MAX6651
  Program sensors-detect: Fix detection of older DS1621
                          Rename the modprobe config file to lm_sensors.conf
                          Drop AMD K10 detection (unreliable sensors)
                          Add detection for AMD Family 11h thermal sensors
                          Stop calling for PIIX5 SMBus testers

2.10.8 (20081216)
  File doc/chips/lm90: Update datasheet links (2.6 backport)
  File doc/chips/pc87360: Drop dead links to datasheets (2.6 backport)
  File i2c-dev.h: Drop I2C_FUNC_SMBUS_*I2C_BLOCK_2 defines
  Library: Avoid namespace pollution
           Add support for the IT8720F chip
           Support separate prefixes lm89, max6658, max6659, max6681,
            max6646, max6647 and max6649
           Add alternative feature name for f71882fg temperature alarms
  Module i2c-i801: Remove verbose debugging messages (2.6 backport)
                   Properly report bus arbitration lost (2.6 backport)
                   Add support for PCH (Ibex Peak) (2.6 backport)
  Module i2c-piix4: Minor cleanups (2.6 backport)
  Module i2c-viapro: Add VX800/VX820 support (2.6 backport)
  Module lm78: Prevent misdetection of Winbond chips
  Module lm90: Don't spam the kernel log (2.6 backport)
  Module max1619: Use inline functions instead of macros (2.6 backport)