@@ -133,8 +133,8 @@ static int fscher_detect(struct i2c_adapter *adapter, int address,
                          unsigned short flags, int kind);
 static int fscher_detach_client(struct i2c_client *client);
 
-static int fscher_read_value(struct i2c_client *client, u8 register);
-static int fscher_write_value(struct i2c_client *client, u8 register,
+static int fscher_read_value(struct i2c_client *client, u8 reg);
+static int fscher_write_value(struct i2c_client *client, u8 reg,
                               u8 value);
 static void fscher_update_client(struct i2c_client *client);
 static void fscher_init_client(struct i2c_client *client);
