@@ -225,8 +225,8 @@ static int mtp008_detect(struct i2c_adapter *adapter, int address,
 			 unsigned short flags, int kind);
 static int mtp008_detach_client(struct i2c_client *client);
 
-static int mtp008_read_value(struct i2c_client *client, u8 register);
-static int mtp008_write_value(struct i2c_client *client, u8 register, u8 value);
+static int mtp008_read_value(struct i2c_client *client, u8 reg);
+static int mtp008_write_value(struct i2c_client *client, u8 reg, u8 value);
 static void mtp008_update_client(struct i2c_client *client);
 static void mtp008_init_client(struct i2c_client *client);
 
